Grease Pencil copy buffer loses material information after first paste #59579

Closed
opened 2018-12-18 18:46:42 +01:00 by heini · 3 comments

System Information
Operating system: Win 10 Home 64
Graphics card: GTX 1060 6GB

Blender Version
Broken:
2.80, cef41d0144, blender2.8, 2018-12-18

Short description of error
In GP edit mode copied strokes can only be pasted once with the original materials, after that all pasted strokes have the same material assigned (first of the list)

Exact steps for others to reproduce the error
create stroke
enter edit mode, select all, ctrl-c
paste twice in different frames

**System Information** Operating system: Win 10 Home 64 Graphics card: GTX 1060 6GB **Blender Version** Broken: 2.80, cef41d0144e, blender2.8, 2018-12-18 **Short description of error** In GP edit mode copied strokes can only be pasted once with the original materials, after that all pasted strokes have the same material assigned (first of the list) **Exact steps for others to reproduce the error** create stroke enter edit mode, select all, ctrl-c paste twice in different frames
Author

Added subscriber: @heini

Added subscriber: @heini
Antonio Vazquez was assigned by Sebastian Parborg 2018-12-19 12:17:48 +01:00

This issue was referenced by ab144437e2

This issue was referenced by ab144437e26ae098207cbdaf55b72a07cc52c636

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#59579
No description provided.