Fix T59579: Grease Pencil copy buffer loses material information